crates/murphy-plugin-macros/tests/ui/fail_node_pattern_quantifier_chain.stderr
error: node_pattern!: pattern parse error: postfix `*` / `+` / `?` cannot be chained — apply at most one quantifier per pattern (at 11..12)
 --> tests/ui/fail_node_pattern_quantifier_chain.rs:5:40
  |
5 | murphy_plugin_macros::node_pattern!(m, "(array int++)");
  |                                        ^^^^^^^^^^^^^^^
